Ryzen 6800H laptop amdgpu: bo 00000000b1eb583a va 0x0800000200-0x08000003ff conflict with 0x0800000200-0x0800000400
Commit 56eac722 gallium/auxiliary/vl: compute shaders for progressive yuv cuses multiple error messages on ThinkBook 14+ Gen4 with firefox started
[ 1240.979445] amdgpu 0000:34:00.0: amdgpu: bo 00000000b1eb583a va 0x0800000200-0x08000003ff conflict with 0x0800000200-0x0800000400 [ 1240.979451] amdgpu 0000:34:00.0: amdgpu: bo 00000000b1eb583a va 0x0800000200-0x08000003ff conflict with 0x0800000200-0x0800000400 [ 1240.979458] amdgpu 0000:34:00.0: amdgpu: bo 00000000b1eb583a va 0x0800000200-0x08000003ff conflict with 0x0800000200-0x0800000400 [ 1240.979466] amdgpu 0000:34:00.0: amdgpu: bo 00000000b1eb583a va 0x0800000200-0x08000003ff conflict with 0x0800000200-0x0800000400 [ 1240.979473] amdgpu 0000:34:00.0: amdgpu: bo 00000000b1eb583a va 0x0800000200-0x08000003ff conflict with 0x0800000200-0x0800000400 [ 1240.979481] amdgpu 0000:34:00.0: amdgpu: bo 00000000b1eb583a va 0x0800000200-0x08000003ff conflict with 0x0800000200-0x0800000400 [ 1240.979495] amdgpu 0000:34:00.0: amdgpu: bo 00000000b1eb583a va 0x0800000200-0x08000003ff conflict with 0x0800000200-0x0800000400
Bisected to the commit above, reverting it from mesa git stops error spam and mesa beaves normally.